<resources>
    <string name="app_name">idatcourse</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="link_login_text">Already a user? Login here</string>
    <string name="link_register_text">new user? Register here</string>
    <string name="logout_button">Log out</string>
</resources>